--- a/gnicorn-deployment.yml
+++ b/gnicorn-deployment.yml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: container
         image: cykim43/back_jenkins:latest
-        command: ["/bin/sh", "-ec", "gunicorn config.wsgi --bind 0.0.0.0:8000"]
+        command: ["/bin/sh", "-ec", "python manage.py migrate && gunicorn config.wsgi --bind 0.0.0.0:8000"]
         envFrom:
         - configMapRef:
             name: back-cm
